--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -424,6 +424,9 @@ msgstr "Sök"
 msgid "Contact us"
 msgstr "Kontakta oss"
 
+msgid "contact us"
+msgstr "kontakta oss"
+
 #: templates/base/sitebase.html:122
 msgid "Contact"
 msgstr "Kontakta oss"
@@ -669,11 +672,14 @@ msgstr "Tack, nu är du anmäld som influensarapportör"
 
 #: templates/registration/registration_complete.html:6
 msgid "Registration complete."
-msgstr "Tack, nu är du anmäld som influensarapportör!"
+msgstr "Tack, nu är du anmäld!"
 
 #: templates/registration/registration_complete.html:7
 msgid "An e-mail containing information about how to activate your account has been sent to your e-mail address."
-msgstr "Ett e-postmeddelande med instruktioner för hur du aktiverar ditt konto har skickats till din e-postadress."
+msgstr "Nästa steg är att aktivera ditt konto. Ett e-postmeddelande med en aktiveringslänk har skickats till din e-postadress."
+
+msgid "Please check your spam folder in case you do not get this email in your Inbox. If you have any problems activating your account, please"
+msgstr "Om du inte får något meddelande, kolla först om det hamnat bland dina spam-meddelanden. Annars kan du även"
 
 #: templates/registration/registration_form.html:8
 msgid "Registration Form"
@@ -771,7 +777,7 @@ msgstr "Här är en sammanfattning av de uppgifter som du angett för dina profi
 
 #: templates/survey/thanks.html:11
 msgid "Group members"
-msgstr "Profilnamn"
+msgstr "Användarnamn"
 
 #: templates/survey/thanks.html:11
 msgid "Health status"
@@ -783,7 +789,7 @@ msgstr "Hantera "
 
 #: templates/survey/thanks.html:16
 msgid "Change name"
-msgstr "Byt profilnamn"
+msgstr "Byt användarnamn"
 
 #: templates/survey/thanks.html:17
 msgid "Change profile"
@@ -795,15 +801,15 @@ msgstr "Rapportera"
 
 #: templates/survey/thanks_profile.html:5
 msgid "Thanks for changing your profile,"
-msgstr "Tack för att du ändrat profilen"
+msgstr "Tack för att du ändrat ditt konto"
 
 #: templates/survey/thanks_profile.html:6
 msgid "Please, if you have not already done so, fill in"
-msgstr "Om du inte redan gjort det, var vänlig fyll i"
+msgstr "Tillbaks till "
 
 #: templates/survey/thanks_profile.html:6
 msgid "the symptoms questionaire"
-msgstr "symptomenkäten"
+msgstr "Mitt konto"
 
 msgid "This account is inactive."
 msgstr ""
@@ -864,7 +870,7 @@ msgid "Influweb result"
 msgstr "Hälsostatus"
 
 msgid "Before we take you to the symptoms questionnaire, please complete the short background questionnaire below. You will only have to complete this once."
-msgstr "Innan du kan rapportera för den här profilen ber vi dig fylla i bakgrundsenkäten nedan. Bakgrundsenkäten måste fyllas i för varje ny profil (men bara en gång för varje)."
+msgstr "Tack för att du gått med i Hälsorapport! För att skapa ditt konto ber vi dig besvara en kort bakgrundsenkät."
 
 msgid "Completing for participant"
 msgstr "Enkäten gäller profilnamnet"
@@ -874,8 +880,8 @@ msgstr "Symptomenkäten"
 
 msgid "The flu status of each participant is based on the symptoms you reported. <strong>This is not a medical diagnosis</strong>. We only ask for symptoms indicative of influenza-like illness, common colds, gastric flu. If you have other symptoms, or you are at all worried, we recommend that you contact your doctor or telephone NHS Direct / NHS 24."
 msgstr ""
-"Hälsorapport kan inte ge deltagarna någon diagnos. Var vändlig kontakta "
-"vårdcentral eller sjukvårdsrådgivningen om du behöver råd eller vård."
+"Hälsorapport ger varje rapport en sjukdomskategori, men det är inte detsamma som en diagnos från en läkare. "
+"Var vänlig kontakta din vårdcentral eller 1177 Vårdguiden om du behöver råd eller vård."
 
 msgid "Unknown"
 msgstr "Okänd"
@@ -901,7 +907,10 @@ msgstr "Hälsorapport"
 
 
 msgid "register"
-msgstr "För att delta i Hälsorapport behöver du skapa ett användarkonto. Skriv in ett användarnamn, din e-postadress och ett lösenord. Det går inte att använda mellanslag i vare sig användarnamn eller lösenord. Däremot ska det fungera att använda bindestreck, underscore (_), å, ä, ö, @, och en rad andra tecken. Du kan till exempel använda en hel e-postadress som användarnamn om du vill. Har du frågor om undersökningen eller tekniska problem, vänligen kontakta oss på <a href=\"mailto:halsorapport@smi.se\">halsorapport@smi.se</a>"
+msgstr "För att delta i Hälsorapport behöver du skapa ett användarkonto. Skriv in ett användarnamn, din e-postadress "
+"och ett lösenord. Det går inte att använda mellanslag i användarnamn eller lösenord. "
+"Har du frågor eller tekniska problem, vänligen kontakta oss på "
+"<a href=\"mailto:halsorapport@smi.se\">halsorapport@smi.se</a>"
 
 msgid "with a different username. If everything else fails, please do not hesitate to"
 msgstr ""
