reminders: white background and new footer text

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -843,13 +843,10 @@ msgstr "Hantera profiler"
 
 msgid "You have received this email because you are registered with %(site_name)s. Your contribution helps us track the spread of flu. If you do not wish to receive this weekly reminder any longer, please <a href=\"%(unsubscribe_url)s\">unsubscribe</a> from our mailings."
 msgstr ""
-"Du har fått detta meddelande för att du är registrerad som deltagare i "
-"Hälsorapport. Tack för att du är med - du bidrar till att hålla koll på "
-"influensan i Sverige. Om du har frågor eller synpunkter är du välkommen att "
-"höra av dig till halsorapport@smi.se. \n\nHälsorapport skickar nyhetsbrev "
-"en gång i veckan. <a href=\"http://www.halsorapport.se/sv/reminder/unsubscrib"
-"e/\">Klicka här</a> för att avbeställa nyhetsbreven. Hälsorapport pågår för "
-"denna säsong till vecka 20. "
+"Du har fått detta meddelande för att du är registrerad som deltagare i Hälsorapport. Tack för att du är med! "
+"Om du har frågor eller synpunkter är du välkommen att höra av dig till"
+"<a href=\"mailto:halsorapport@smi.se\">halsorapport@smi.se</a>. Hälsorapport skickar nyhetsbrev en gång i veckan. "
+"<a href=\"http://www.halsorapport.se/sv/reminder/unsubscribe/\">Klicka här</a> för att avbeställa nyhetsbreven."
 
 msgid "Below is the list of participants currently managed by you. Click the corresponding option next to the participant to complete the background or symptoms questionnaire for that person, or to remove a participant."
 msgstr "På den här sidan kan du se alla profiler som du redan skapat under ditt användarkonto, uppdatera bakgrundsinformation för varje profil, och välja vilket profilnamn du vill rapportera för. Du kan även lägga till nya profiler. När du har skapat en profil och fyllt i bakgrundsinformationen kan du rapportera direkt för den profilen. Vi hoppas att du kan rapportera varje vecka, oavsett om du är frisk eller sjuk. Samma sak gäller alla profiler - all information hjälper oss att få koll på influensaläget i Sverige!"
