--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -817,11 +817,11 @@ msgstr ""
 "fått angående aktivering av ditt konto. Om du inte fått någon e-post, kolla "
 "dina spamfilter. Skriv annars till oss på halsorapport@smi.se."
 
-msgid "Activate your account:\n\nClick the following URL or copy and paste it to the browser's address bar.\n\nhttp://%(site)s/accounts/activate/%(activation_key)s/ \n\nThis activation URL will expire in %(expiration_days)s days."
+msgid "Activate your account:\n\nClick the following URL or copy and paste it to the browser's address bar.\n\nhttp://%(site)s/accounts/activate/%(activation_key)s/\n\nThis activation URL will expire in %(expiration_days)s days."
 msgstr ""
 "Aktivera ditt konto:\n\nTack för att du vill gå med i Hälsorapport!\n\nFör "
 "att aktivera ditt konto enkelklicka på länken nedan eller kopiera och klistra "
-"in den i din webbläsare.\n%(site)s/accounts/activate/%(activation_key)s/"
+"in den i din webbläsare.\n%(site)s/accounts/activate/%(activation_key) "
 "\n\nLänken är giltig i %(expiration_days)s dagar.\n\nNär du har aktiverat "
 "ditt konto kan du logga in.\n\nFörsta gången du loggar in på ditt "
 "användarkonto behöver du skapa din profil och fylla i en bakgrundsenkät. "
