link with text after

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -821,8 +821,7 @@ msgid "Activate your account:\n\nClick the following URL or copy and paste it to
 msgstr ""
 "Aktivera ditt konto:\n\nTack för att du vill gå med i Hälsorapport!\n\nFör "
 "att aktivera ditt konto enkelklicka på länken nedan eller kopiera och klistra "
-"in den i din webbläsare.\n<a href=\"%(site)s/accounts/activate/%(activation_key)s/\">Aktivera konto</a>"
-"\n\nLänken är giltig i %(expiration_days)s dagar.\n\nNär du har aktiverat "
+"in den i din webbläsare.\n%(site)s/accounts/activate/%(activation_key)s/ .Länken är giltig i %(expiration_days)s dagar.\n\nNär du har aktiverat "
 "ditt konto kan du logga in.\n\nFörsta gången du loggar in på ditt "
 "användarkonto behöver du skapa din profil och fylla i en bakgrundsenkät. "
 "Först när du fyllt i bakgrundsenkäten kan du rapportera sjukdom.\n\nBästa "
