--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -822,7 +822,7 @@ msgstr ""
 "Aktivera ditt konto:\n\nTack för att du vill gå med i Hälsorapport!\n\nFör "
 "att aktivera ditt konto enkelklicka på länken nedan eller kopiera och klistra "
 "in den i din webbläsare.\n%(site)s/accounts/activate/%(activation_key)s/ "
-"Länken är giltig i %(expiration_days)s dagar.\n\nNär du har aktiverat "
+"\n\nLänken är giltig i %(expiration_days)s dagar.\n\nNär du har aktiverat "
 "ditt konto kan du logga in.\n\nFörsta gången du loggar in på ditt "
 "användarkonto behöver du skapa din profil och fylla i en bakgrundsenkät. "
 "Först när du fyllt i bakgrundsenkäten kan du rapportera sjukdom.\n\nBästa "
