--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -327,7 +327,7 @@ msgstr "Influensaliknande symptom"
 
 #: apps/survey/views.py:54
 msgid "Cold / allergy"
-msgstr "Förkylning / allergi"
+msgstr "Förkylning"
 
 #: apps/survey/views.py:56
 msgid "Gastrointestinal symptoms"
@@ -336,6 +336,12 @@ msgstr "Magsjuka"
 #: apps/survey/views.py:58
 msgid "Other non-influenza symptons"
 msgstr "Andra icke-specifika symptom"
+
+msgid "ILI / gastro"
+msgstr "Influensaliknande symptom + magsjuka"
+
+msgid "Cold / gastro"
+msgstr "Magsjuka + förkylning"
 
 #: apps/survey/views.py:60
 msgid "Next status"
