Updated Swedish text on newsletter unsubscribe.

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -309,9 +309,8 @@ msgstr "Avbeställ nyhetsbrev"
 #: apps/reminder/templates/reminder/unsubscribe.html:7
 msgid "You may unsubscribe from the Influenzanet reminder/newsletter by pressing the button below."
 msgstr ""
-"Du kan avprenumerera från Influensakolls nyhetsbrev genom att klicka på "
-"knappen nedan. Nyhetsbreven kommer en gång i veckan fram under "
-"influensasäsongen. "
+"Du kan avprenumerera från Häslorapports nyhetsbrev genom att klicka på "
+"knappen nedan. Nyhetsbreven kommer en gång i veckan. "
 
 #: apps/reminder/templates/reminder/unsubscribe_successful.html:7
 msgid "You have been successfully unsubscribed from the mailing list"
