Clarified text in registration email.

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -825,12 +825,12 @@ msgstr ""
 msgid "Activate your account:\n\nClick the following URL or copy and paste it to the browser's address bar.\n\nhttp://%(site)s/accounts/activate/%(activation_key)s/\n\nThis activation URL will expire in %(expiration_days)s days."
 msgstr ""
 "Aktivera ditt konto:\n\nTack för att du vill gå med i Hälsorapport!\n\nFör "
-"att aktivera ditt konto enkelklicka på länken nedan eller kopiera och klistra "
+"att aktivera ditt konto, enkelklicka på länken nedan eller kopiera och klistra "
 "in den i din webbläsare.\nhttp://%(site)s/accounts/activate/%(activation_key)s/"
 "\n\nLänken är giltig i %(expiration_days)s dagar.\n\nNär du har aktiverat "
 "ditt konto kan du logga in.\n\nFörsta gången du loggar in på ditt "
-"användarkonto behöver du skapa din profil och fylla i en bakgrundsenkät. "
-"Först när du fyllt i bakgrundsenkäten kan du rapportera sjukdom.\n\nBästa "
+"användarkonto behöver du ange den kod som står på din personliga inbjudan och fylla i en bakgrundsenkät. "
+"Först när du fyllt i bakgrundsenkäten kan du rapportera om du känner dig frisk eller sjuk.\n\nBästa "
 "hälsningar\n\nVi som jobbar med Hälsorapport\nhalsorapport@smi.se"
 
 msgid "Activate your account! %(site)s"
