--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -628,7 +628,7 @@ msgstr "Tack! "
 msgid "We've e-mailed you instructions for setting your password to the e-mail address you submitted. You should be receiving it shortly."
 msgstr ""
 "Vi har skickat ett e-postmeddelande till dig med instruktioner för hur du "
-"byter ditt lösenord. Du bör få den inom kort. Om du inte får det, kolla dina "
+"byter ditt lösenord. Du bör få det inom kort. Om du inte får det, kolla dina "
 "spamfilter. "
 
 #: templates/registration/password_reset_email.html:3
