--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -934,3 +934,5 @@ msgstr ""
 msgid "Change password"
 msgstr ""
 
+msgid "Influenzanet is a system to monitor the activity of influenza-like-illness (ILI) with the aid of volunteers via the internet"
+msgstr "Hälsorapport är en del av Influenzanet, ett europeiskt system för webbaserad syndromövervakning."
