Text changes to all forms with Captcha-fields.

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -661,7 +661,7 @@ msgstr "Vi som jobbar med %(site_name)s"
 
 #: templates/registration/password_reset_form.html:10
 msgid "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one."
-msgstr "Glömt ditt lösenord? Fyll i din e-postadress nedan så skickar vi en e-post med instruktioner för hur du får ett nytt lösenord."
+msgstr "Glömt ditt lösenord? Fyll i din e-postadress nedan så skickar vi en e-post med instruktioner för hur du får ett nytt lösenord. Avsluta med att skriva in kontrollordet."
 
 #: templates/registration/password_reset_form.html:14
 msgid "E-mail address:"
@@ -912,8 +912,9 @@ msgstr "Hälsorapport"
 
 msgid "register"
 msgstr "Skriv in ett användarnamn, din e-postadress "
-"och ett lösenord. Det går inte att använda mellanslag i användarnamn eller lösenord. "
-"För hjälp, kontakta oss på "
+"och ett lösenord. Avsluta med att skriva in kontrollordet. "
+"Det går inte att använda mellanslag i användarnamn eller lösenord. "
+"För hjälp, kontakta "
 "<a href=\"mailto:halsorapport@smi.se\">halsorapport@smi.se</a>"
 
 msgid "with a different username. If everything else fails, please do not hesitate to"
@@ -942,3 +943,10 @@ msgstr "Skriv in bokstäverna som visas i bilden."
 
 msgid "Invalid CAPTCHA."
 msgstr "Felaktig CAPTCHA."
+
+msgid "Captcha"
+msgstr "Kontrollord"
+
+msgid "Registration requires ID-code."
+msgstr "Obs! För att gå med behöver du vara inbjuden. "
+"Koden från inbjudan uppger du när du loggat in för första gången."
