Reverted change to age calculation, and changed layout and contents of registration page

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -210,7 +210,7 @@ msgstr ""
 "ett mellanslag i användarnamn eller lösenord. Bokstäver, siffror, och "
 "symboler (till exempel, @ eller bindestreck) ska accepteras i både "
 "användarnamn och lösenord. Om problemet fortsätter ber vi dig skicka ett "
-"meddelande till halsorapport@smi.se. "
+"meddelande till halsorapport@folkhalsomyndigheten.se. "
 
 #: apps/pollster/db/models/fields.py:9
 msgid "Year and month (in YYYY-MM format)"
@@ -492,7 +492,7 @@ msgstr ""
 "registrerade dig? Om inte, prova då att <a "
 "href=\"www.halsorapport.se/sv/accounts/login\">logga in</a>. Det är möljigt "
 "att det fungerat även om du fått detta meddelande. Skriv annars till oss på "
-"halsorapport@smi.se. "
+"halsorapport@folkhalsomyndigheten.se. "
 
 #: templates/registration/activate.html:9
 #: templates/registration/activation_complete.html:9
@@ -617,7 +617,7 @@ msgstr ""
 "redan har använts eller att det gått för lång tid. Försök igen genom att "
 "klicka på <a href=\"http://www.halsorapport.se/sv/accounts/password/reset/\">"
 "glömt lösenord</a>. Om det fortfarande inte fungerar, skicka ett meddelande "
-"till halsorapport@smi.se. "
+"till halsorapport@folkhalsomyndigheten.se. "
 
 #: templates/registration/password_reset_done.html:4
 #: templates/registration/password_reset_done.html:8
@@ -820,7 +820,7 @@ msgid "This account is inactive."
 msgstr ""
 "Detta konto har inte aktiverats. Klicka på länken i det e-postmeddelande du "
 "fått angående aktivering av ditt konto. Om du inte fått någon e-post, kolla "
-"dina spamfilter. Skriv annars till oss på halsorapport@smi.se."
+"dina spamfilter. Skriv annars till oss på halsorapport@folkhalsomyndigheten.se."
 
 msgid "Activate your account:\n\nClick the following URL or copy and paste it to the browser's address bar.\n\nhttp://%(site)s/accounts/activate/%(activation_key)s/\n\nThis activation URL will expire in %(expiration_days)s days."
 msgstr ""
@@ -831,7 +831,7 @@ msgstr ""
 "ditt konto kan du logga in.\n\nFörsta gången du loggar in på ditt "
 "användarkonto behöver du ange den kod som står på din personliga inbjudan och fylla i en bakgrundsenkät. "
 "Först när du fyllt i bakgrundsenkäten kan du rapportera om du känner dig frisk eller sjuk.\n\nBästa "
-"hälsningar\n\nVi som jobbar med Hälsorapport\nhalsorapport@smi.se"
+"hälsningar\n\nVi som jobbar med Hälsorapport\nhalsorapport@folkhalsomyndigheten.se"
 
 msgid "Activate your account! %(site)s"
 msgstr "Aktivera ditt konto! %(site)s"
@@ -901,7 +901,7 @@ msgstr ""
 "Något som du skrivit in accepterades inte. Var vänlig försök igen. Bokstäver, "
 "siffror, och symboler (till exempel, @ eller bindestreck) ska accepteras, men "
 "kom ihåg att skilja på stora och små bokstäver. Om problemet fortsätter ber "
-"vi dig skicka ett meddelande till halsorapport@smi.se. "
+"vi dig skicka ett meddelande till halsorapport@folkhalsomyndigheten.se. "
 
 msgid "Please try to copy and paste the link from the activation email, making sure you've got all letters copied. If this fails, please try to log in using the username and password you provided during registration. If this still fails, please try to register with a different username. If everything else fails, please do not hesitate to Kontakta oss."
 msgstr " "
@@ -915,7 +915,7 @@ msgstr "Skriv in ett användarnamn, din e-postadress "
 "och ett lösenord. Avsluta med att skriva in kontrollordet. "
 "Det går inte att använda mellanslag i användarnamn eller lösenord. "
 "För hjälp, kontakta "
-"<a href=\"mailto:halsorapport@smi.se\">halsorapport@smi.se</a>"
+"<a href=\"mailto:halsorapport@folkhalsomyndigheten.se\">halsorapport@<wbr>folkhalsomyndigheten.se</a>"
 
 msgid "with a different username. If everything else fails, please do not hesitate to"
 msgstr ""
@@ -948,5 +948,5 @@ msgid "Captcha"
 msgstr "Kontrollord"
 
 msgid "Registration requires ID-code."
-msgstr "Obs! För att gå med behöver du vara inbjuden. "
+msgstr "<strong>Obs!</strong> För att gå med behöver du vara inbjuden. "
 "Koden från inbjudan uppger du när du loggat in för första gången."
