Admin changelogs for users now display both old and new value for fields. Also uses i18n properly.

--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -950,3 +950,6 @@ msgstr "Kontrollord"
 msgid "Registration requires ID-code."
 msgstr "<strong>Obs!</strong> För att gå med behöver du vara inbjuden. "
 "Koden från inbjudan uppger du när du loggat in för första gången."
+
+msgid "Changed %s from %s to %s."
+msgstr "Ändrade %s från %s till %s."
